--- a/composer.json
+++ b/composer.json
@@ -3,5 +3,18 @@
     "description": "A PHP wrapper for Zeit Now API",
     "type": "library",
     "license": "MIT",
-    "require": {}
+    "require": {
+        "php": ">=5.4.0",
+        "guzzlehttp/guzzle": "~5.3|~6.0"
+    },
+    "require-dev": {
+        "mockery/mockery": "0.9.*",
+        "phpunit/phpunit": "~5.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "Joecohens\\Now\\": "src/"
+        }
+    },
+    "prefer-stable": true
 }
